Fix alignment

--- a/source/stylesheets/components/search.css
+++ b/source/stylesheets/components/search.css
@@ -347,6 +347,7 @@ input::placeholder {
 
   .Search--wrapContent {
     flex-wrap: nowrap !important;
+    justify-content: space-around;
   }
 }
 
